5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1662_2968.log
== TEST (2019-04-15 14:25:39) 
-- CODE:
L=float(input(5.00+3.50+4.00))
if (l)
-- ERROR:
File "XXXX", line 2
    if (l)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:14) 
-- CODE:
L=float(input())
if (l)
-- ERROR:
File "XXXX", line 2
    if (l)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
